<resources>
    <string name="app_name">Loja Calcado</string>
    <string name="txt_password">Password</string>
    <string name="txt_login">Login</string>
    <string name="txt_email">Email</string>
    <string name="txt_registar">Registar</string>
    <string name="txt_configurar_api">Configurar API</string>
    <string name="txt_api">http://localhost/api</string>
    <string name="txt_guardar">Guardar</string>
    <string name="txt_username">Username</string>
    <string name="txt_primeironome">Primeiro Nome</string>
    <string name="txt_ultimonome">Último Nome</string>
    <string name="txt_telemovel">Telemóvel</string>
    <string name="txt_morada">Morada</string>
    <string name="menuRemover">Remover</string>
    <string name="txt_menu_ListaProdutos">Lista de Produtos</string>
    <string name="txt_menu_Historico">Histórico de Compras</string>
    <string name="txt_menu_PerfilUtilizador">Perfil de Utilizador</string>
    <string name="txt_menu_Definicoes">Definições</string>
    <string name="txt_menu_Logout">Logout</string>
    <string name="configuracoes">Configurações</string>
    <string name="ndOpen">Open</string>
    <string name="ndClose">Close</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nome">Nome: </string>
    <string name="categoria">Categoria: </string>
    <string name="preco">Preço: </string>
    <string name="marca">Marca: </string>
    <string name="pesquisar">Pesquisar</string>
    <string name="stock">Stock: </string>
    <string name="descricao">Descricao: </string>
    <string name="tamanho"> </string>
    <string name="cores">Cores: </string>
    <string name="txt_menu_Dashboard">Dashboard</string>
    <string name="data_da_compra">Data da Compra: </string>
    <string name="total_produtos_compras">Total Produtos Compras: </string>
    <string name="preco_total">Preço Total: </string>
    <string name="id">Id: </string>
    <string name="total">"Total: "</string>
    <string name="txt_menu_Carrinho">Carrinho de Compras</string>
    <string name="quantidade">Quantidade: </string>
    <string name="id_produto">"Produto ID: "</string>
</resources>