<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="5dp"
    tools:context=".RegistarActivity">

    <TextView
        android:id="@+id/tvUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:text="Username:" />

    <EditText
        android:id="@+id/etUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/txt_username"
        android:layout_marginBottom="10dp" />

    <TextView
        android:id="@+id/tvPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:text="Password:" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/txt_password"
        android:layout_marginBottom="10dp" />

    <TextView
        android:id="@+id/tvEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:text="Email:" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/txt_email"
        android:layout_marginBottom="10dp" />

    <TextView
        android:id="@+id/tvPrimeiroNome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:text="Primeiro Nome:" />

    <EditText
        android:id="@+id/etPrimeiroNome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/txt_primeironome"
        android:layout_marginBottom="10dp" />

    <TextView
        android:id="@+id/tvUltimoNome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:text="Último Nome:" />

    <EditText
        android:id="@+id/etUltimoNome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/txt_ultimonome"
        android:layout_marginBottom="10dp" />

    <TextView
        android:id="@+id/tvTelemovel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:text="Telemóvel:" />

    <EditText
        android:id="@+id/etTelemovel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/txt_telemovel"
        android:layout_marginBottom="10dp" />

    <TextView
        android:id="@+id/tvMorada"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:text="Morada:" />

    <EditText
        android:id="@+id/etMorada"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/txt_morada"
        android:layout_marginBottom="10dp" />

    <Button
        android:id="@+id/btnRegistar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#FF0000"
        android:onClick="OnClickRegistarUtilizador"
        android:text="@string/txt_registar" />

    <View
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.3"/>
</LinearLayout>