<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >
    </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabAdicionar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        android:backgroundTint="@color/red"
        android:focusable="true"
        android:src="@drawable/ic_action_add_carrinho"
        app:tint="@android:color/white" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp"
        android:orientation="vertical"
        tools:context=".DetalhesProdutoActivity">

        <ImageView
            android:id="@+id/imgCapa"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.7"
            android:src="@drawable/logo_produto" />

        <EditText
            android:id="@+id/etNome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/nome"
            android:textColor="@color/black"
            android:enabled="false" />

        <EditText
            android:id="@+id/etDescricao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:hint="@string/descricao"
            android:textColor="@color/black"
            android:scrollbars="vertical"
            android:enabled="false" />

        <EditText
            android:id="@+id/etStock"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:hint="@string/stock"
            android:textColor="@color/black"
            android:enabled="false" />

        <EditText
            android:id="@+id/etCategoria"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/categoria"
            android:textColor="@color/black"
            android:enabled="false" />

        <EditText
            android:id="@+id/etMarca"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/marca"
            android:textColor="@color/black"
            android:enabled="false" />

        <EditText
            android:id="@+id/etPreco"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:hint="@string/preco"
            android:textColor="@color/black"
            android:enabled="false" />

        <EditText
            android:id="@+id/etTamanho"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/tamanho"
            android:textColor="@color/black"
            android:enabled="false" />

        <EditText
            android:id="@+id/etCores"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/cores"
            android:textColor="@color/black"
            android:enabled="false" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.2" />

    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
