<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="5dp"
    tools:context=".LoginActivity">

<!--    <ImageView-->
<!--        android:id="@+id/imageView"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="0dp"-->
<!--        android:layout_weight="0.7"-->
<!--        android:src="" />-->

    <TextView
        android:id="@+id/tvUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:text="Username:" />

    <EditText
        android:id="@+id/etUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/txt_username"
        android:layout_marginBottom="10dp" />

    <TextView
        android:id="@+id/tvPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:text="Password:" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/txt_password"
        android:inputType="textPassword"
        android:layout_marginBottom="10dp" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#FF0000"
        android:onClick="OnClickLogin"
        android:text="@string/txt_login" />

    <Button
        android:id="@+id/btnRegistar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#FF0000"
        android:onClick="OnClickRegistar"
        android:text="@string/txt_registar" />

    <Button
        android:id="@+id/btnConfigurarAPI"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#FF0000"
        android:onClick="OnClickConfigurarAPI"
        android:text="@string/txt_configurar_api" />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.3"/>
</LinearLayout>